--- a/about/index.html
+++ b/about/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 
 
-<link rel="stylesheet" href="/assets/about.ea0cdaed.css" />
-<link rel="stylesheet" href="/assets/my-first-astro-post.207dbef2.css" />
+<link rel="stylesheet" href="/assets/about.1bd669be.css" />
+<link rel="stylesheet" href="/assets/apost.cf982d53.css" />
 <link rel="stylesheet" href="/assets/about.1f6588f5.css" /><h1 class="bg-blue-100 text-center text-base astro-EAH7EYM2" style="--skillColor: navy;--liFontSize: 22px;">My Astro Site</h1>
 
 <a href="/" class="astro-EAH7EYM2" style="--skillColor: navy;--liFontSize: 22px;">Home</a>
